--- a/Android/scenes/cantata/src/main/res/layout/cantata_fragment_song_list.xml
+++ b/Android/scenes/cantata/src/main/res/layout/cantata_fragment_song_list.xml
@@ -48,17 +48,26 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintTop_toBottomOf="@id/etSearch"/>
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/recyclerSearchResult"
+    <FrameLayout
+        android:id="@+id/layoutSearchResult"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:orientation="vertical"
         android:visibility="gone"
-        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
-        app:spanCount="1"
+        tools:visibility="visible"
+        android:background="@color/cantata_dialog_bg_blue"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/layoutResult"
-        tools:listitem="@layout/cantata_item_choose_song_list" />
+        app:layout_constraintTop_toBottomOf="@id/etSearch">
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/recyclerSearchResult"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical"
+            android:visibility="gone"
+            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
+            app:spanCount="1"
+            tools:listitem="@layout/cantata_item_choose_song_list" />
+    </FrameLayout>
 
     <androidx.appcompat.widget.AppCompatTextView
         android:id="@+id/llEmpty"
