--- a/Android/scenes/show/src/main/res/layout/show_live_detail_bottom.xml
+++ b/Android/scenes/show/src/main/res/layout/show_live_detail_bottom.xml
@@ -12,7 +12,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:padding="15dp"
-        android:visibility="invisible">
+        android:visibility="visible">
 
         <androidx.appcompat.widget.AppCompatTextView
             android:id="@+id/tvChat"
