--- a/Android/scenes/pure1v1/src/main/res/layout/pure1v1_call_receive_dialog.xml
+++ b/Android/scenes/pure1v1/src/main/res/layout/pure1v1_call_receive_dialog.xml
@@ -158,6 +158,7 @@
             app:layout_constraintEnd_toEndOf="parent"
             >
             <androidx.appcompat.widget.AppCompatTextView
+                android:id="@+id/tvTips"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:layout_marginStart="15dp"
