--- a/Android/scenes/showTo1v1/src/main/res/layout/show_to1v1_call_send_dialog.xml
+++ b/Android/scenes/showTo1v1/src/main/res/layout/show_to1v1_call_send_dialog.xml
@@ -82,6 +82,7 @@
             app:layout_constraintTop_toBottomOf="@id/tvConnectInfo" />
 
         <androidx.appcompat.widget.AppCompatTextView
+            android:id="@+id/tvTips"
             android:layout_width="wrap_content"
             android:layout_height="36dp"
             android:layout_marginHorizontal="15dp"
