--- a/Android/scenes/voice_spatial/src/main/res/layout/voice_spatial_view_room_3d_mic.xml
+++ b/Android/scenes/voice_spatial/src/main/res/layout/voice_spatial_view_room_3d_mic.xml
@@ -70,10 +70,11 @@
 
     <androidx.appcompat.widget.AppCompatImageView
         android:id="@+id/ivMicTag"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="24dp"
+        android:layout_height="24dp"
         android:src="@drawable/voice_icon_room_mic_open0"
         android:visibility="gone"
+        tools:visibility="visible"
         app:layout_constraintBottom_toBottomOf="@id/ivMicInfo"
         app:layout_constraintEnd_toEndOf="@id/ivMicInfo" />
 </androidx.constraintlayout.widget.ConstraintLayout>
