--- a/Android/scenes/voice_spatial/src/main/res/values/dimens.xml
+++ b/Android/scenes/voice_spatial/src/main/res/values/dimens.xml
@@ -12,4 +12,21 @@
     <dimen name="voice_like_anim_x_point_factor">30.0dp</dimen>
     <dimen name="voice_like_size_height">27.3dp</dimen>
     <dimen name="voice_like_size_width">32.5dp</dimen>
+    <dimen name="voice_sp_8">8sp</dimen>
+    <dimen name="voice_sp_9">9sp</dimen>
+    <dimen name="voice_sp_10">10sp</dimen>
+    <dimen name="voice_sp_11">11sp</dimen>
+    <dimen name="voice_sp_12">12sp</dimen>
+    <dimen name="voice_sp_13">13sp</dimen>
+    <dimen name="voice_sp_14">14sp</dimen>
+    <dimen name="voice_sp_15">15sp</dimen>
+    <dimen name="voice_sp_16">16sp</dimen>
+    <dimen name="voice_sp_17">17sp</dimen>
+    <dimen name="voice_sp_18">18sp</dimen>
+    <dimen name="voice_sp_19">19sp</dimen>
+    <dimen name="voice_sp_20">20sp</dimen>
+    <dimen name="voice_sp_24">24sp</dimen>
+    <dimen name="voice_sp_28">28sp</dimen>
+    <dimen name="voice_sp_32">32sp</dimen>
+    <dimen name="voice_sp_36">36sp</dimen>
 </resources>
